--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - .:/todo-server
+      - .:/todo-front
     tty: true
     stdin_open: true
     expose:
@@ -51,9 +51,9 @@ services:
       - ./mysql/sql:/docker-entrypoint-initdb.d
     environment:
       # - DB_PORT=3306
-      MYSQL_DATABASE: "contact_db"
+      MYSQL_DATABASE: "todo_db"
       MYSQL_USER: "user"
-      MYSQL_ROOT_PASSWORD: "contact_db_password"
+      MYSQL_ROOT_PASSWORD: "todo_db_password"
     networks:
       - app_network
 
