--- a/todo-server/pom.xml
+++ b/todo-server/pom.xml
@@ -43,6 +43,11 @@
 			<artifactId>helidon-metrics</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.helidon.microprofile.tests</groupId>
+			<artifactId>helidon-microprofile-tests-junit5</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<scope>test</scope>
@@ -114,6 +119,18 @@
 			<artifactId>jaxb-impl</artifactId>
 			<version>2.4.0-b180830.0438</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+<!-- 		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.10.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.10.0</version>
+		</dependency> -->
+
 	</dependencies>
 
 
