--- a/todo-front/package.json
+++ b/todo-front/package.json
@@ -12,8 +12,10 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/proxy": "^2.1.0",
     "core-js": "^3.15.1",
+    "keycloak-js": "^15.0.1",
     "nuxt": "^2.15.7",
     "vee-validate": "^3.4.11",
+    "vuejs-logger": "^1.5.5",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
