--- a/todo-front/package.json
+++ b/todo-front/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/vue": "^5.9.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/proxy": "^2.1.0",
+    "@vue-a11y/dark-mode": "^1.1.1",
     "core-js": "^3.16.2",
     "keycloak-js": "^15.0.1",
     "micromodal": "^0.4.6",
